--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ project(luayed VERSION 0.1.0)
 add_executable(luayed
     src/main.cpp
     src/lexer.cpp
+    src/parser.cpp
 )
+
+set_property(TARGET luayed PROPERTY CXX_STANDARD 17)
