--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ add_executable(luaytest
     test/parser.cc
     test/lua.cc
     test/values.cc
-    lib/tap/tap.c
+    dep/tap/tap.c
 )
 
 target_link_libraries(luayed luacomp)
@@ -57,7 +57,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall")
 enable_testing()
 add_test(NAME "luayedtests" COMMAND luaytest)
 
-target_include_directories(luaytest PRIVATE lib)
+target_include_directories(luaytest PRIVATE dep)
 target_include_directories(luaytest PRIVATE src)
 
 set_property(TARGET luayed PROPERTY CXX_STANDARD 17)
