--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "src",
         "include",
         "lib",
-    ]
+    ],
+    "files.associations": {
+        "*.js": "javascript",
+        "vector": "cpp"
+    }
 }
