--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(luaycli
 
 add_executable(luaysis
     bin/analysis/main.cc
+    bin/analysis/generator.cc
 )
 
 set_target_properties(luaycli
