--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,8 @@
         "optional": "cpp",
         "random": "cpp",
         "cmath": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "istream": "cpp",
+        "numeric": "cpp"
     }
 }
