refactor: merge lyddef into luadef

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "cmath": "cpp",
         "tuple": "cpp",
         "istream": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "iosfwd": "cpp"
     }
 }
