--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ add_executable(luaytest
     dep/tap/tap.c
 )
 
-target_link_libraries(luayed debug luaydbg)
+target_link_libraries(luayed PRIVATE debug luaydbg)
 target_link_libraries(luaycli luayed)
 target_link_libraries(luaysis luayed)
 target_link_libraries(luaytest luayed)
@@ -79,24 +79,14 @@ add_test(NAME "luayedtests" COMMAND luaytest)
 
 include_directories(include)
 
-target_include_directories(luayed INTERFACE dep)
-target_include_directories(luayed INTERFACE src)
-target_include_directories(luayed INTERFACE lib)
-target_include_directories(luayed INTERFACE .)
+target_include_directories(luayed PRIVATE src)
+target_include_directories(luayed PRIVATE lib)
 
-target_include_directories(luaydbg INTERFACE dep)
-target_include_directories(luaydbg INTERFACE src)
-target_include_directories(luaydbg INTERFACE lib)
-target_include_directories(luaydbg INTERFACE .)
+target_include_directories(luaydbg PRIVATE src)
 
-target_include_directories(luaysis PRIVATE dep)
 target_include_directories(luaysis PRIVATE src)
-target_include_directories(luaysis PRIVATE lib)
-target_include_directories(luaysis PRIVATE .)
 
 target_include_directories(luaytest PRIVATE dep)
 target_include_directories(luaytest PRIVATE src)
-target_include_directories(luaytest PRIVATE lib)
-target_include_directories(luaytest PRIVATE .)
 
 set_property(TARGET luayed PROPERTY CXX_STANDARD 17)
